--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,11 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h3></h3>
                 <h1>Software Engineer</h1>
-                <h5>@North American University</h5>
-                <h5>Leader @Blank Sector</h5>				
+                <h5>North American University</h5>
+                <h5>Future Googler</h5>				
             </div>
             <div class="col-lg-8 col-lg-offset-2 himg">
-                <img src="{{ "/assets/img/me.jpg" | prepend: site.baseurl }}" class="img-responsive">
+                <img src="{{ "/assets/img/me.jpg" | prepend: site.baseurl }}" class="img-rounded">
             </div>
         </div><!-- /row -->
     </div> <!-- /container -->
