--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                 <h5>North American University</h5>
                 <h5>Future Googler</h5>				
             </div>
-            <div class="col-lg-8 col-lg-offset-2 himg">
+            <div class="col-lg-8 col-lg-offset-2 himg img-rounded">
                 <img src="{{ "/assets/img/me.jpg" | prepend: site.baseurl }}" class="img-rounded">
             </div>
         </div><!-- /row -->
