--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-     <img style="sidebar-logo" src="/public/profile.png">
+     <img style="margin-top: 25px;" src="/public/profile.png">
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
