--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <img src="/public/profile.jpg" style="sidebar-logo">
+        <img src="/public/profile.png">
         <a href="{{ site.baseurl }}">
           {{ site.title }}
         </a>
