--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -69,6 +69,11 @@ html {
     text-align: left;
   }
 }
+/* Sidebar logo */
+sidebar-logo{
+    padding-top: 10px;
+    margin-top: 100px;
+}
 
 /* Sidebar links */
 .sidebar a {
