--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -72,7 +72,7 @@ html {
 
 /* Sidebar logo */
 .sidebar-logo{
-    border-radius: 20px;
+    border-radius: 50%;
 }
 /* Sidebar links */
 .sidebar a {
