--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,9 @@
 
   {% include head.html %}
 
+<body class="theme-base-08">
   <body>
-
+      
     {% include sidebar.html %}
 
     <div class="content container">
