Added fa-icons and testing sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
@@ -27,6 +28,7 @@
       {% endfor %}
         
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <i class="fa fa-stack-overflow fa-lg"></i>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
