Testing fa-icons

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
-
+      <i class="fa fa-stack-overflow fa-lg"></i>
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
@@ -26,7 +26,7 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-        
+        <i class="fa fa-stack-overflow fa-lg"></i>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <i class="fa fa-stack-overflow fa-lg"></i>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
