--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
   <body>
       
     {% include sidebar.html %}
-
+      <i class="fa fa-stack-overflow fa-lg"></i>
+      <i class="fa fa-stack-overflow fa-lg"></i>
     <div class="content container">
       {{ content }}
     </div>
