--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<link rel="stylesheet" href="../_includes/font-awesome-4.7.0/css/font-awesome.min.css">
 
   {% include head.html %}
 
