--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,10 +28,10 @@
       {% endfor %}
         
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-        <a href="http://stackoverflow.com/users/5110035/michaelmmeskhi"> <i class="fa fa-stack-overflow fa-2x" aria-hidden="true"></i></a>
-        <a href="https://www.linkedin.com/in/mikhailmmeskhi"> <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
-        <a href="https://github.com/MichaelMMeskhi"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-        <a href="michael.m.meskhi@live.com"> <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
+        <a href="http://stackoverflow.com/users/5110035/michaelmmeskhi"> <i class="fa fa-stack-overflow fa-lg" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/mikhailmmeskhi"> <i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i></a>
+        <a href="https://github.com/MichaelMMeskhi"> <i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+        <a href="michael.m.meskhi@live.com"> <i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
