--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+        <img src="../public/apple-touch-icon-144-precomposed.png">
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
