Testing SO widget

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+<a href="http://stackoverflow.com/users/5110035/michaelmmeskhi">
+<img src="http://stackoverflow.com/users/flair/5110035.png" width="208" height="58" alt="profile for MichaelMMeskhi at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for MichaelMMeskhi at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+</a>
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
