SO Flair added successfully

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="http://stackoverflow.com/users/5110035/michaelmmeskhi"><img src="http://stackoverflow.com/users/flair/5110035.png?theme=dark" width="208" height="58" alt="profile for MichaelMMeskhi at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for MichaelMMeskhi at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
+        <a href="http://stackoverflow.com/users/5110035/michaelmmeskhi"><img src="http://stackoverflow.com/users/flair/5110035.png?theme=clean" width="208" height="58" alt="profile for MichaelMMeskhi at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for MichaelMMeskhi at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
         </a>
