Added Quora link and mailto attribute

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,8 @@
         <a href="http://stackoverflow.com/users/5110035/michaelmmeskhi"> <i style="width:50px;" class="fa fa-stack-overflow fa-lg" aria-hidden="true"></i></a>
         <a href="https://www.linkedin.com/in/mikhailmmeskhi"> <i style="width:50px;" class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i></a>
         <a href="https://github.com/MichaelMMeskhi"> <i style="width:50px;" class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-        <a href="michael.m.meskhi@live.com"> <i style="width:50px;" class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
+        <a href="mailto:michael.m.meskhi@live.com?Subject=Hello%20there%20friend!"> <i style="width:50px;" class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+        <a href="https://www.quora.com/profile/Mikhail-Mekhedkin-Meskhi"> <i style="width:50px;" class="fa fa-quora fa-lg" aria-hidden="true"></i></a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
