--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
+  <script src="//load.sumome.com/" data-sumo-site-id="5b4191bd8049533b1bcf86191120312220d58066fd359824865008ae85d5c1fe" async="async"></script>
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
