--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,5 +1,5 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    I'm Michael M.Meskhi, a innovative researcher and student from Houston who works in the machine learning field. I spend my evenings working on Kaggle competitions and reading Computer Science literature. Organizing hackathons is my favorite way to interact with other Computer Science students. Getting ready to apply for graduate studies to become the long aspiring researcher.
 </div>
