--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -1,6 +1,6 @@
 /* LAYOUT CSS */
 .cover {
-  background-color: $background-color;
+  background-image: url('../../img/bg.png');
   position: fixed;
   text-align: center;
   width: 100%;
