Updated about me page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,8 +30,8 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3 site-description">
-        <p>{{ site.description }}</p>
+      <div class="footer-col footer-col-3 site-quote">
+        <p>{{ site.quote }}</p>
       </div>
     </div>
 
