--- a/css/style.scss
+++ b/css/style.scss
@@ -344,6 +344,12 @@ pre {
   text-indent: 6px;
   font-family: 'Josefin Sans';
 }
+.site-quote {
+  font-size: 14px;
+  letter-spacing: 2px;
+  text-indent: 150px;
+  font-family: 'Josefin Sans';
+}
 .exclamationMark {
   padding-left: 2em;
   padding-right: 2em;
